apps/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:deluge.lab.emc2.build
    traefik.port: '8112'
  labels:
    app: deluge
  name: deluge
  namespace: media
spec:
  selector:
    matchLabels:
      app: deluge
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:deluge.lab.emc2.build
        traefik.port: '8112'
      labels:
        app: deluge
    spec:
      containers:
      - env:
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        image: linuxserver/deluge
        imagePullPolicy: IfNotPresent
        name: deluge
        ports:
        - containerPort: 8112
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: "1"
            memory: 512Mi
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /downloads/incomplete
          name: deluge-downloads-incomplete
        - mountPath: /downloads/complete
          name: downloads-complete
        - mountPath: /config
          name: deluge-config
      restartPolicy: Always
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 60
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"
      volumes:
      - name: deluge-downloads-incomplete
        persistentVolumeClaim:
          claimName: deluge-downloads-incomplete
      - name: downloads-complete
        persistentVolumeClaim:
          claimName: downloads-complete
      - name: deluge-config
        persistentVolumeClaim:
          claimName: deluge-config
