apps/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media
spec:
  ports:
  - name: deluge
    port: 8112
    protocol: TCP
    targetPort: 8112
  selector:
    app: deluge
