apps/deluge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: deluge
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - deluge.lab.emc2.build
    secretName: deluge-letsencrypt-tls
  rules:
  - host: deluge.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: deluge
            port:
              number: 8112
        path: /
        pathType: Prefix
